--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -7,14 +7,14 @@
 
 - name: Add Elasticsearch apt key
   apt_key:
-   url: "https://packages.elastic.co/GPG-KEY-elasticsearch"
+   url: "https://artifacts.elastic.co/GPG-KEY-elasticsearch"
    state: present
 
 # Add the Elasticsearch apt repo. For versions 6 of the stack - use '6.x-prerelease':
 
 - name: Adding Elasticsearch repo
   apt_repository:
-   repo: deb https://artifacts.elastic.co/packages/5.x/apt stable main
+   repo: deb https://artifacts.elastic.co/packages/6.x/apt stable main
    state: present
 
 # Installing Elasticsearch
