Give each role appropriate dependencies.

--- a/site.yml
+++ b/site.yml
@@ -7,8 +7,8 @@
   become: yes
   become_user: root
   roles:
-  - { role: java }
   - { role: elasticsearch }
+  - { role: logstash }
   - { role: kibana }
-  - { role: metricbeat }
+  
 
