--- a/site.yml
+++ b/site.yml
@@ -2,10 +2,8 @@
 #
 # Playbook to install the ELK stack + Beats
 #
-- hosts: elkservers
-  remote_user: ubuntu
-  become: yes
-  become_user: root
+- hosts: elk
+  remote_user: root
   roles:
   - { role: elasticsearch }
   - { role: logstash }
