--- a/roles/elastic/tasks/main.yml
+++ b/roles/elastic/tasks/main.yml
@@ -7,11 +7,31 @@
 
 - name: Add Elastic apt key
   apt_key:
-   url: "https://artifacts.elastic.co/GPG-KEY-elasticsearch"
-   state: present
+    url: "https://artifacts.elastic.co/GPG-KEY-elasticsearch"
+    state: present
+  when: (ansible_os_family == "Debian")
 
 # Add the Elastics apt repo.
 - name: Adding Elastic repo
   apt_repository:
     repo: deb https://artifacts.elastic.co/packages/6.x/apt stable main
     state: present
+    when: (ansible_os_family == "Debian")
+
+
+# Add Elastic Yum Key
+- name: Add Elastic yum key
+  rpm_key:
+    state: present
+    key: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+  when: (ansible_os_family == "RedHat")
+
+# Add Elastic Yum Repository
+- name: Add Elastic yum repository
+  yum_respository:
+    name: Elastic repository for 6.x packages
+    baseurl: https://artifacts.elastic.co/packages/6.x/yum
+    gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+    gpgcheck: yes
+    enabled: yes
+  when: (ansible_os_family == "RedHat")
