--- a/roles/metricbeat/tasks/main.yml
+++ b/roles/metricbeat/tasks/main.yml
@@ -1,10 +1,5 @@
 ---
-#
-# Installing Metricbeat
-#
-
 # Install Metricbeat 
-
 - name: Install Metricbeat with apt
   apt:
     name: metricbeat
@@ -23,11 +18,11 @@
 # Setup configuration file
 - name: Setup Metricbeat configuration file
   template:
-    src:
-    dest:
+    src: metricbeat.yml.j2
+    dest: /etc/metricbeat/metricbeat.yml
 
 # Starting Metricbeat
 - name: Starting Metricbeat
   service:
-   name: metricbeat
-   state: started
+    name: metricbeat
+    state: started
